# ci

./: .gitignore  Cargo.toml  PLAN.md  README.md  buildkite.nix  example.nix  find-derivations.nix  flake.nix  rust.nix
nix/: buildkite.nix  default.nix  find-derivations.nix
nix/lib/: clippy.nix  nixpkgs-fmt.nix  rustfmt.nix
server/: Cargo.toml
server/migrations/: initial.sql
server/src/: http.rs  lib.rs  main.rs  store.rs
tool/: Cargo.toml  default.nix
tool/src/: build_info.rs  develop.rs  flags.rs  git.rs  main.rs
tool/src/buildkite/: cli.rs  command.rs  mod.rs  trigger.rs
