[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.35", features = ["serde"] }
serde = "1.0.197"
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = "0.7.10"
