[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.4", features = ["env", "derive"] }
lazy_static = "1.4.0"
postgres-from-row = "0.5.2"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
