[package]
name = "ci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.3", features = [ "derive", "env" ] }
json-digest = "0.0.16"
lazy_static = "1.4.0"
serde = { version = "1.0.197", features = [ "derive" ] }
serde_json = "1.0.114"
thiserror = "1.0.58"
